# purl_diver

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SESSION_SUMMARY.md  commit_message.txt  extract_shellcode  extract_shellcode.c  purl_diver  test_suite.sh
.archive/: BIGEXEPURLOUT.md  BIGPURLOUT.md  CONTINUE.md
.qwen/: PROJECT_SUMMARY.md
DOCS/: BUILD.md  MODULAR_ARCHITECTURE.md  PROGRESS_SUMMARY.md  REFACTORING_STATUS.md  SECURITY.md  SUGGESTIONS.md  TROUBLESHOOTING.md  USAGE.md
docs/: BUILD.md  OPTIMIZATIONS.md  USAGE.md  purl_diver.1
examples/: README.md  test_cases.sh
include/: batch_processor.h  entropy.h  error_codes.h  hash_algorithms.h  import_export_analyzer.h  options.h  output_formats.h  pe_parser.h  pe_types.h  section_analyzer.h  utils.h
src/: README.md  batch_processor.c  batch_processor.d  entropy.c  entropy.d  error_codes.c  error_codes.d  hash_algorithms.c  hash_algorithms.d  import_export_analyzer.c  import_export_analyzer.d  main.c  main.d  main_modular.c  options.c  options.d  output_formats.c  output_formats.d  pe_parser.c  pe_parser.d  purl_diver.c  section_analyzer.c  section_analyzer.d  utils.c  utils.d
tests/: README.md  entropy_test_utils.h  test_comprehensive  test_comprehensive.c  test_entropy  test_entropy.c  test_hash  test_hash.c
